--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     bottom: 0;
     width: 100%;
     height: 100vh;
-    background: url(../images/loader.gif);
+    background: url(./images/loader.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 400px;
@@ -69,7 +69,7 @@ header nav {
 .logo a {
     font-size: 30px;
     font-weight: 900;
-    background: url(../images/green.svg);
+    background: url(./images/green.svg);
     background-size: cover;
     background-clip: text;
     color: transparent;
@@ -1097,7 +1097,7 @@ footer .container {
 .footer-col .logo a {
     font-size: 30px;
     font-weight: 900;
-    background: url(../images/green1.avif);
+    background: url(./images/green1.avif);
     background-size: cover;
     background-clip: text;
     color: transparent;
