--- a/login/login.css
+++ b/login/login.css
@@ -24,6 +24,20 @@
     background-color: rgba(255, 255, 255, 0.7);
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 50px;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #01BDAA;
+    border-radius: 50px;
+}
 
 form {
     width: 100%;
@@ -38,7 +52,8 @@ form {
     align-items: center;
 }
 
-.form-left, .form-right {
+.form-left,
+.form-right {
     width: 50%;
 }
 
@@ -238,9 +253,11 @@ label input ::placeholder {
         display: block;
     }
 
-    .form-left, .form-right {
+    .form-left,
+    .form-right {
         width: 100%;
-    }   
+    }
+
     .form-right {
         margin-top: 30px;
     }
