--- a/faq/faq.css
+++ b/faq/faq.css
@@ -50,11 +50,13 @@ body {
 
 /* HEADER */
 header {
+    position: fixed;
+    top: 0;
     line-height: 60px;
     z-index: 200;
     width: 100%;
     padding: 0 100px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 header nav {
@@ -156,7 +158,7 @@ header nav ul li a.entrance:hover {
         align-items: center;
         width: 100%;
         height: 100vh;
-        top: 0;
+        top: -10px;
         right: -100%;
         justify-content: center;
         position: fixed;
@@ -349,7 +351,7 @@ footer .container {
 .footer-col .logo a {
     font-size: 30px;
     font-weight: 900;
-    background: url(./images/green1.avif);
+    background: url(../images/green1.avif);
     background-size: cover;
     background-clip: text;
     color: transparent;
