--- a/signup/signup.css
+++ b/signup/signup.css
@@ -185,7 +185,7 @@ label input ::placeholder {
 }
 
 .form-button button {
-    background: #04C45C;
+    background: #009d8e;
     border-radius: 5px;
     font-family: 'Roboto';
     font-style: normal;
@@ -196,7 +196,7 @@ label input ::placeholder {
 }
 
 .form-button button:hover {
-    background-color: #038a42;
+    background-color: #034942;
 }
 
 .form-button a:nth-child(2) {
