--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 header.scrolled {
@@ -9,6 +12,13 @@ header.scrolled {
     backdrop-filter: blur(10px);
     
 }
+
+html, body {
+    overflow-x: hidden; /* Gorizontal skrollni butunlay o'chiradi */
+    margin: 0;
+    padding: 0;
+  }
+  
 
 #load {
     position: fixed;
